--- a/web-extension/popup.html
+++ b/web-extension/popup.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style/popup.css'>
-    <script src='lib/popup.js'></script>
-</head>
-<body>
-    <ul>
-        <li>Eins</li>
-        <li>Zwei</li>
-        <li>Drei</li>
-    </ul>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <title>Page Title</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            media="screen"
+            href="style/popup.css"
+        />
+        <script src="lib/popup.js"></script>
+    </head>
+    <body>
+        <ul>
+            <li>
+                <div style="width: 300px;">
+                    <p>Eins</p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <p>Zwei</p>
+                </div>
+            </li>
+            <li>
+                <div>
+                    <p>Fünf</p>
+                </div>
+            </li>
+        </ul>
+    </body>
 </html>
