--- a/web-extension/popup.html
+++ b/web-extension/popup.html
@@ -13,22 +13,25 @@
         <script src="lib/popup.js"></script>
     </head>
     <body>
-        <ul>
-            <li>
-                <div style="width: 300px;">
-                    <p>Eins</p>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <p>Zwei</p>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <p>Fünf</p>
-                </div>
-            </li>
-        </ul>
+        <main id="steps">
+            <h1>Tante Jacky</h1>
+            <section class="step">
+                <h2>Frontend-Version</h2>
+                <p>0.1.0</p>
+            </section>
+            <section class="step">
+                <h2>TLS-Zertifikat der Website</h2>
+                <div class="icon">ø</div>
+                <p>ok</p>
+                <form>
+                    <button name="show" type="button">Details …</button>
+                </form>
+            </section>
+            <section class="step">
+                <h2>Identität der Website</h2>
+                <p>spk-aschaffenburg.de</p>
+                <small>Sparkasse Aschaffenburg-Alzenau</small>
+            </section>
+        </main>
     </body>
 </html>
