Try out if JS modules work in an extension popup

--- a/web-extension/popup.html
+++ b/web-extension/popup.html
@@ -10,7 +10,7 @@
             media="screen"
             href="style/popup.css"
         />
-        <script src="lib/popup.js" defer></script>
+        <script type="module" src="./lib/popup.js" defer></script>
     </head>
     <body>
         <main id="steps">
