Rename assets so you can recognize them in console

--- a/web-extension/tante-jacky.html
+++ b/web-extension/tante-jacky.html
@@ -8,9 +8,9 @@
             rel="stylesheet"
             type="text/css"
             media="screen"
-            href="style/popup.css"
+            href="style/tante-jacky.css"
         />
-        <script type="module" src="./lib/popup.js" defer></script>
+        <script type="module" src="./lib/tante-jacky.js" defer></script>
     </head>
     <body>
         <main id="steps">
