popup: add header

--- a/web-extension/tante-jacky.html
+++ b/web-extension/tante-jacky.html
@@ -13,8 +13,12 @@
         <script type="module" src="./lib/tante-jacky.js" defer></script>
     </head>
     <body>
-        <main id="steps">
+        <header>
             <h1>Tante Jacky</h1>
+            <p class="subhead">Browser-Erweiterung für chipTAN</p>
+            <p class="subhead">von Claudia Pellegrino</p>
+        </header>
+        <main id="steps">
             <template id="template-step-success">
                 <section class="step">
                     <h2></h2>
