Add missing style class
See also: [1], [2]

[1]: https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/user_interface/Browser_styles
[2]: https://bugzilla.mozilla.org/show_bug.cgi?id=1465256

--- a/web-extension/tante-jacky.html
+++ b/web-extension/tante-jacky.html
@@ -26,7 +26,7 @@
                     <p></p>
                     <small></small>
                     <form>
-                        <button type="button"></button>
+                        <button class="browser-style" type="button"></button>
                     </form>
                 </section>
             </template>
