--- a/web-extension/tante-jacky.html
+++ b/web-extension/tante-jacky.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Page Title</title>
+        <title></title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link
             rel="stylesheet"
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header>
-            <h1>Tante Jacky</h1>
+            <h1 id="appName"></h1>
             <p class="subhead">Browser-Erweiterung für chipTAN</p>
             <p class="subhead">von Claudia Pellegrino</p>
         </header>
